force-app/main/default/objects/Lead/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>Temporary</description>
    <label>Address 1</label>
    <type>TextArea</type>
</CustomField>