force-app/main/default/objects/Lead/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <type>TextArea</type>
</CustomField>