force-app/main/default/objects/Lead/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>YT</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Institution Or Government</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>