force-app/main/default/objects/Lead/fields/Dialticsheet__c.field-meta.xml
<CustomField>
    <fullName>Dialticsheet__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dial (tic sheet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>