force-app/main/default/objects/Lead/fields/DoNotEmail__c.field-meta.xml
<CustomField>
    <fullName>DoNotEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>