force-app/main/default/objects/Lead/fields/FederalDoNotCall__c.field-meta.xml
<CustomField>
    <fullName>FederalDoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Do Not Call</label>
    <type>Checkbox</type>
</CustomField>