force-app/main/default/objects/Lead/fields/IsOwnerActive__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Active</label>
    <type>Checkbox</type>
</CustomField>