force-app/main/default/objects/Lead/fields/LastPaidInvoice__c.field-meta.xml
<CustomField>
    <fullName>LastPaidInvoice__c</fullName>
    <label>Last Paid Invoice</label>
    <type>Date</type>
</CustomField>