force-app/main/default/objects/Lead/fields/SaleAmount__c.field-meta.xml
<CustomField>
    <fullName>SaleAmount__c</fullName>
    <label>Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>