force-app/main/default/objects/Lead/fields/ShippingAddress1__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress1__c</fullName>
    <description>Temporary</description>
    <label>Shipping Address 1</label>
    <type>TextArea</type>
</CustomField>