force-app/main/default/objects/Lead/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <formula>if(LEN(  ShippingStreet__c) &gt; 0,  ShippingStreet__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(  ShippingStateProvince__c) &gt; 0,  ShippingStateProvince__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(   ShippingCountry__c) &gt; 0,  ShippingCountry__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(  ShippingZipPostalCode__c) &gt; 0,  ShippingZipPostalCode__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>