force-app/main/default/objects/Lead/fields/ShippingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingZipPostalCode__c</fullName>
    <label>Shipping Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>