force-app/main/default/objects/Lead/listViews/AC_Contractors_Leads.listView-meta.xml
<ListView>
    <fullName>AC_Contractors_Leads</fullName>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>AC Contractors</value>
    </filters>
    <label>AC Contractors Leads</label>
</ListView>