force-app/main/default/objects/Lead/listViews/Canada_Gold_Mining_Leads.listView-meta.xml
<ListView>
    <fullName>Canada_Gold_Mining_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Canada Gold Mining</value>
    </filters>
    <label>Canada Gold Mining Leads</label>
</ListView>