force-app/main/default/objects/Lead/listViews/House_Accounts_Lead.listView-meta.xml
<ListView>
    <fullName>House_Accounts_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Origin__c</columns>
    <filterScope>Queue</filterScope>
    <label>House Accounts Leads</label>
    <queue>House_Accounts</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>